--- a/package.json
+++ b/package.json
@@ -5,18 +5,29 @@
   "scripts": {
     "dev": "node --loader ts-node/esm node_modules/@shack-js/cli/src/index.mjs dev -e .ts",
     "build": "shack build && tsc",
-    "start": "shack start -e .js -s ./dist/web -a ./dist/tsc/apis"
+    "start": "shack start -e .js -s ./dist/web -a ./dist/tsc/apis",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@shack-js/cli": "^1.1.7",
+    "@shack-js/cli": "^1.1.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "0.0.9",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "babel-loader": "^8.2.3",
+    "sb": "^6.4.19",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
